--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,37 @@
 annotated-types==0.7.0
 anyio==4.11.0
 bcrypt==4.0.1
+certifi==2025.10.5
 click==8.3.0
 colorama==0.4.6
+ecdsa==0.19.1
 fastapi==0.118.0
 greenlet==3.2.4
 h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.10
+iniconfig==2.1.0
+mypy_extensions==1.1.0
+packaging==25.0
 passlib==1.7.4
+pathspec==0.12.1
+platformdirs==4.4.0
+pluggy==1.6.0
 psycopg2-binary==2.9.10
+pyasn1==0.6.1
 pydantic==2.11.10
 pydantic_core==2.33.2
+Pygments==2.19.2
 PyJWT==2.10.1
+pytest==8.4.2
+pytest-asyncio==1.2.0
 python-dotenv==1.1.1
+python-jose==3.5.0
+python-multipart==0.0.20
+pytokens==0.1.10
+rsa==4.9.1
+six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.43
 starlette==0.48.0
